--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "advent-readme-stars"
-version = "0.1.0"
-description = ""
-authors = ["Kevin Duff <kevinkelduff@gmail.com>"]
+name = "aoc-markdown-table"
+version = "1.0.3"
+description = "Duplicated and modified version of advent-readme-stars."
+authors = ["Thomas Feuerbach"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -49,7 +49,7 @@ INPUT_TABLEMARKER = "<!--- advent_readme_stars table --->"
 INPUT_STARSYMBOL = "⭐"
 INPUT_YEAR = "2019"
 INPUT_HEADERPREFIX = "##"
-ADVENT_URL = "http://fake.site.k2bd.dev"
+ADVENT_URL = "http://fake.site.tfeuerbach.dev"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
