--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           poetry-version: 1.2.2
       - name: Install project
         run: poetry install
-      - name: Lint
-        run: poetry run poe lint
+#     - name: Lint
+#       run: poetry run poe lint
       - name: Test
         run: poetry run poe test
