--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aoc-markdown-table"
+name = "advent_readme_stars"
 version = "1.0.6"
 description = "Duplicated and modified version of advent-readme-stars."
 authors = ["Thomas Feuerbach"]
